@@ -1,10 +1,16 @@
+2008-04-18  Bruno Haible  <bruno@clisp.org>
+
+	* src/integer/cl_I.h (FN_MSD1_mask, FN_MSD2_mask, FN_MSD3_mask):
+	Define without tag bits. Fixes a bug in FN_to_NDS with negative fixnums
+	on platforms where FN_maxlength > 1.
+
 2008-04-07  Alexei Sheplyakov  <varg@theor.jinr.ru>
 
 	* configure.ac: create subdirectory to hold auto-generated headers.
 
 2008-04-07  Alexei Sheplyakov  <varg@theor.jinr.ru>
 
-	Re-esatblish 1.2.0 ABI, broken 2008-02-22:
+	Re-establish 1.2.0 ABI, broken 2008-02-22:
 	* src/float/input/cl_F_readparsed.cc: Add obsolete signature with index
 	args uintL.
 	* src/integer/input/cl_I_readparsed.cc: Likewise.
